# spotify-pirateship

./: .gitignore  README.md  db_management.py  download_songs.py  get_video_url.py  google_project_setup.md  main.py  pyproject.toml  spotify_fetcher.py
ML_genre_classifier/: predictor_model.py
songs/sql_queries/: distinct_album_id.sql  distinct_artist_id.sql  distinct_track_id.sql  get_new_albums.sql  get_new_artists.sql  get_tracks_to_add_genre.sql  get_tracks_to_download.sql  get_tracks_to_search.sql
songs/table_defs/: dim_album.sql  dim_artist.sql  dim_song.sql  dim_song_genre.sql  fact_batch_execution.sql  fact_error_log.sql  fact_genre_assignment.sql  fact_song_download.sql  fact_song_features.sql  fact_youtube_search.sql  xref_artist_genres.sql  xref_song_to_artist.sql
